# adhoconda

./: README.md  pyproject.toml
adhoconda/: __init__.py  _common.py  _ext.py  _makenv.py
